# client_interface_ros

./: CMakeLists.txt  package.xml  start_robot.sh
config/: configuration.yaml
include/client_interface/: .client_interface.h.swp  client_acceptor.h  client_handler.h  client_interface.h  db_handler.h  dr_robot.h  parser.h  queue.h  robot_exception.h  shm_data.h  shm_manager.h  speedo.h  utils.h
launch/: client_interface.launch  speedo.launch  speedo_test.launch
src/: client_acceptor.cpp  client_handler.cpp  client_interface.cpp  client_interface.cpp.save  client_interface_node.cpp  db_handler.cpp  dr_robot.cpp  parser.cpp  queue.cpp  shm_manager.cpp  speedo.cpp  speedo_node.cpp  utils.cpp
